Adicionei bordas nas figuras

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ status=Hello%20World%21
 				<p>
 					<i>"An open protocol to allow secure authorization in a simple and standard method from web, mobile and desktop applications."</i>
 				</p>
-				<img style="margin-left: 15%; border: 1px solid;" src="images/chart.png" />
+				<img style="border: 1px solid;" class="centered" src="images/chart.png" />
 			</article>
 
 			<article>
@@ -157,7 +157,7 @@ status=Hello%20World%21
 			<article>
 				<h3> Botão de autorização do usuário </h3>
 				<br>
-				<img class='centered' src="images/authapp.jpg" />
+				<img class='centered' style="border: 1px solid;" src="images/authapp.jpg" />
 				<p>
 					Na maioria das vezes, quanto mais autorizações requeridas de um usuário, maior a probabilidade de rejeição do aplicativo pelo usuário.
 				</p>
@@ -169,7 +169,7 @@ status=Hello%20World%21
 					Na aba <i>settings</i> da sua aplicação:
 				</p>
 				<br>
-				<img class="centered" src="images/type.png" />
+				<img class="centered" style="border: 1px solid;" src="images/type.png" />
 			</article>
 
 			<article>
